Fix compilation errors across all 101 modules in WMS Transformation
This commit resolves all compilation errors to achieve a successful build
across all 7 domains (Picking, Inventory, Inbound, Outbound, Task,
MasterData, Printing).

Key fixes include:

**Task Domain (task-service-core):**
- TaskLifecycleServiceImpl: Fixed Task entity method calls (getAssignedUser,
  getAssignedDevice), TaskHistory factory methods, repository method names
- TaskGroupingServiceImpl: Fixed TaskGroup/WorkQueue builder methods,
  repository calls (findById vs findByGroupKey), status enums
- TaskOrchestrationServiceImpl: Fixed TaskDependency/TaskWorkflow builders,
  repository method names, LocalDateTime vs Instant usage
- TaskPrioritizationServiceImpl: Fixed PriorityRule/UserWorkload methods,
  WorkloadMetrics constructor parameters

**Outbound Domain (outbound-service-core, outbound-api):**
- AllocationWorkflowImpl: Fixed allocateOrder to allocateOrderWithStrategy
- CreateOrderRequest: Removed OrderType enum, fixed toEntity() mapping
- ShipmentController/WaveController: Updated response DTOs to match entities
- OrderResponse/AllocationResponse: Fixed field name mappings

**Inbound Domain:**
- ReceiptController: Updated to use correct service method signatures
- InboundLegacyBridge: Fixed parity testing result comparison
- Domain entities: Added missing methods and fields

**Inventory Domain:**
- InventoryCoreServiceImpl: Fixed event publishing and method signatures
- Added upstream event classes for cross-service communication

**Picking Domain:**
- Fixed event class structures and shared kernel exceptions

**Printing Domain:**
- Fixed controller response types and domain model methods

**Infrastructure:**
- Updated JDBC repositories to match domain interfaces
- Fixed Kafka event publishers across all domains

All 101 modules now compile successfully.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>